--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,19 +5,25 @@
 
 body {
     margin: 0;
+    color: white;
 }
 
 .box {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 20%;
 }
 
 .carte {
-    text-align: center;
     background-color: orange;
+    padding: 1.5rem;
+    border-top-left-radius: 10px;
 }
 
+.img img {
+    transform: translate(40%, 40%);
+}
 .carte.deux {
     background-color: turquoise;
 }
@@ -29,4 +35,10 @@ body {
 .txt {
     width: 80% auto;
     padding: 1rem;
+}
+
+.btn {
+    background-color: white;
+    padding: 1rem;
+    color: black;
 }
